Make characters clickable; add circle placeholder

--- a/css/marks.css
+++ b/css/marks.css
@@ -23,3 +23,12 @@
     border-right-style: solid;
     border-bottom-style: none;
 }
+
+.placeholder {
+    color: #aaaaaa;
+    border-color: #aaaaaa;
+}
+
+.clickable {
+    cursor: pointer;
+}
