--- a/css/accents.css
+++ b/css/accents.css
@@ -1,14 +1,7 @@
-high {
+.accent-high {
     border-top: solid purple 1px;
 }
-drop {
+.accent-drop {
     border-top: solid red 1px;
     border-right: solid red 1px;
-}
-low {
-    border-bottom: solid green 1px;
-}
-rise {
-    border-bottom: solid blue 1px;
-    border-right: solid blue 1px;
 }
